# dqn-reinforcement-learning-service

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.docker/: Dockerfile
agent/: agent.py
dqn_reinforcement_learning/: main.py
dqn_reinforcement_learning/agents/: defender.py
dqn_reinforcement_learning/environment/: config.py
dqn_reinforcement_learning/model/: dqn.py
dqn_reinforcement_learning/utils/: constants.py  plotter.py  replay_memory.py  trainer.py  training.py
environment/: environment.py
model/: dqn.py
utils/: replay_memory.py
