[tool.poetry]
name = "dqn-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Ricardo <rarcifa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.1.2"
matplotlib = "3.7.4"
gymnasium = "0.29.1"

[tool.poetry.scripts]
dqn-reinforcement-learning-local = "dqn-reinforcement-learning.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"